tests/cases/smoke/valid/expressions_string_concat.dp
var first = "a"
var second = "b"
var both = first + second
