tests/cases/smoke/invalid/expr_is_operator.dp
var a = none
var b = none
var same = a is b
